added follow us and made some corrections

--- a/pubg2.html
+++ b/pubg2.html
@@ -13,7 +13,7 @@
                         <tr>
                             <td width="350"><img src="pics/intropicpubg.jpg" width="450" height="200"></td>
                             <th width="950" height="200">
-                                <font color="orange" size="6">PUBG MOBILE<br>OFFICIAL PUBG ON MOBILE
+                                <font color="orange" size="6">PUBG MOBILE<br>ORIGINAL BATTLEROYALE ON MOBILE
 
                                 </font>
                             </th>
@@ -41,6 +41,9 @@
                             <th><a href="Contact.html">
                                     <font color="white">Contact Us</font>
                                 </a></th>
+                            <th><a href="Follow_Us.html">
+                                    <font color="white">Follow Us</font>
+                                </a></th>
                         </tr>
 
                     </table>
@@ -55,7 +58,7 @@
                     <marquee behavior="alternate" direction="">
                         <font color="white" size="4">
                             <b>
-                                Copyrights Reserved 2019-2020 &copy;Tencent Games
+                                Copyrights Reserved 2020-2021 &copy;Tencent Games
                             </b></font>
                     </marquee>
                 </td>
